# reference-clone

./: .cursorignore  .eslintrc.json  .eslintrc.json.bak  .gitignore  .prettierignore  CLAUDE.md  CODEBASE_ONBOARDING_GUIDE.md  DATA_NOTES.md  DESIGN_ANALYSIS_REPORT.md  DESIGN_ANALYSIS_SUMMARY.md  DESIGN_SYSTEM.md  GEMINI.md  LINTING.md  Makefile  README.md  ROADMAP_PROGRESS.md  code_review_report.md  columns.txt  docker-compose.yml  implementation_plan.md  main.py  package-lock.json  package.json  ports.txt  pyproject.toml  pyrightconfig.json  start_start.py  tables.txt  trunk_all_output.txt  trunk_all_output_2.txt  trunk_all_output_3.txt  trunk_all_output_4.txt  trunk_output.txt  trunk_output_2.txt  trunk_output_3.txt  verify_endpoints.py
.agent/rules/: rules.md
.cursor/rules/: baby-steps.mdc
.github/instructions/: AGENTS.instructions.md
.github/workflows/: ci.yml
.roo/rules/: AGENTS.md
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.trunk/configs/: .hadolint.yaml  ruff.toml
.trunk/plugins/: trunk
backend/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  Makefile  README.md  check_games.py  check_import.py  check_import_debug.py  check_players.py  check_teams.py  database.py  inspect_game_stats.py  inspect_player.py  inspect_schema.py  list_tables.py  main.py  models.py  pyproject.toml  reproduce_error.py  requirements.txt  test_db.py
backend/app/: README.md  __init__.py  cache.py  cache_compat.py  config.py  config_compat.py  database.py  database_compat.py  dependencies.py  graphql_schema.py  logging_config.py  logging_config_compat.py  main.py  main_new.py  models.py  rate_limit.py  rate_limit_compat.py
backend/app/api/: README.md  __init__.py
backend/app/api/graphql/: __init__.py  schema.py
backend/app/api/v1/: __init__.py  boxscores.py  contracts.py  draft.py  franchises.py  games.py  players.py  router.py  seasons.py  teams.py
backend/app/core/: README.md  __init__.py  cache.py  config.py  database.py  exceptions.py  logging.py  rate_limit.py
backend/app/models/: README.md  __init__.py  base.py  contract.py  draft.py  franchise.py  game.py  player.py  season.py  standings.py  team.py
backend/app/repositories/: README.md  __init__.py  base.py  boxscore_repository.py  contract_repository.py  draft_repository.py  franchise_repository.py  game_repository.py  player_repository.py  season_repository.py  team_repository.py
backend/app/routers/: boxscores.py  contracts.py  draft.py  franchises.py  games.py  players.py  seasons.py  teams.py
backend/app/services/: README.md  __init__.py  base.py  game.py  player.py  season.py  stats.py  team.py
backend/app/utils/: __init__.py  dataframe.py  dates.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/db/: schema.sql
backend/routers/: __init__.py  games.py  players.py  teams.py
backend/scripts/: create_indexes.py
backend/scripts/db_inspection/: check_data.py  check_games.py  check_players.py  check_source_players.py  check_source_stats.py  check_source_teams.py  check_teams.py  inspect_game_stats.py  inspect_player.py  inspect_schema.py  list_all_tables.py  list_tables.py
backend/scripts/debug/: reproduce_error.py  reproduce_output.txt  test_db.py  test_seasons_query.py
backend/scripts/etl/: load_contracts.py  load_players.py  load_seasons.py  load_splits.py  load_stats.py  load_team_stats.py  load_teams.py  migrate_schema.py  populate_boxscores.py  update_games_linescore.py
backend/scripts/research/: explore_nba_api.py
backend/tests/: conftest.py
backend/tests/integration/: test_new_endpoints.py  test_standings_validation.py
backend/tests/unit/: __init__.py  test_database.py  test_teams_api.py
data/: .gitattributes  nba.duckdb
docs/: ARCHITECTURE.md  RESTRUCTURING_PLAN.md
frontend/: .env.example  .eslintrc.json  Dockerfile  Dockerfile.prod  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/components/: ErrorBoundary.tsx  Hero.tsx  Layout.tsx  Navbar.tsx  PlayerHeader.tsx  PlayerSubNav.tsx  Table.tsx
frontend/src/components/atoms/: index.ts
frontend/src/components/atoms/Badge/: Badge.tsx
frontend/src/components/atoms/Button/: Button.tsx
frontend/src/components/atoms/Card/: Card.tsx
frontend/src/components/atoms/Input/: Input.tsx
frontend/src/components/atoms/Spinner/: Spinner.tsx
frontend/src/components/dashboard/: LeadersCard.tsx  Scoreboard.tsx  StandingsTable.tsx
frontend/src/components/molecules/: index.ts
frontend/src/components/molecules/SearchBar/: SearchBar.tsx
frontend/src/components/molecules/TeamCard/: TeamCard.tsx  index.ts
frontend/src/lib/: api.ts  dataMapper.tsx  tableSchema.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/boxscores/: [game_id].tsx
frontend/src/pages/contracts/: index.tsx
frontend/src/pages/draft/: index.tsx
frontend/src/pages/franchises/: index.tsx
frontend/src/pages/games/: [game_id].tsx  index.tsx
frontend/src/pages/leagues/: [season_id].tsx  index.tsx
frontend/src/pages/players/: [player_id].tsx  index.tsx
frontend/src/pages/players/[player_id]/: advanced.tsx  gamelog.tsx  splits.tsx
frontend/src/pages/teams/: [team_id].tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: boxscore.ts  index.ts  season.ts  stats.ts
plan/: basketball-reference-clone-spec.md  basketball-reference-erd.mermaid  basketball-reference-tables-columns.md
scripts/: find_port.py
tests/: README.md
tests/unit/: test_database.py  test_game_repository.py  test_teams_router.py
