[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basketball-reference-clone"
version = "0.1.0"
description = "Basketball statistics dashboard backend"
requires-python = ">=3.10"
authors = [
    {name = "Project Maintainer", email = "maintainer@example.com"},
]
license = {text = "MIT"}
keywords = ["basketball", "statistics", "sports", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/basketball-reference-clone"
Repository = "https://github.com/yourusername/basketball-reference-clone"
Documentation = "https://github.com/yourusername/basketball-reference-clone/docs"

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "types-python-dateutil",
    "pandas-stubs",
    "httpx",
]

[tool.ruff]
# Set the maximum line length to 100
line-length = 100
# Target Python 3.10+
target-version = "py310"

# Include Python files
include = ["*.py", "*.pyi"]

# Exclude common directories  
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    "node_modules",
]

[tool.ruff.lint]
# Enable recommended rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

# Disable specific rules that may be too strict
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI uses this pattern)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line endings
line-ending = "auto"

[tool.ruff.lint.isort]
# Group imports by type
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["app"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
minversion = "6.0"
addopts = "-ra -q"
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["scripts/research", "scripts/db_inspection"]
follow_imports = "silent"
mypy_path = "backend"

[[tool.mypy.overrides]]
module = [
    "slowapi.*",
    "pythonjsonlogger.*",
    "nba_api.*",
    "redis.*"
]
ignore_missing_imports = true
