[project]
name = "backend"
version = "0.1.0"
description = "Basketball statistics dashboard backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "duckdb",
  "pydantic",
  "python-multipart",
  "pandas",
  "numpy",
  "slowapi",
  "python-json-logger",
  "redis",
  "strawberry-graphql[fastapi]",
  "nba-api>=1.11.3",
  "basketball-reference-web-scraper>=4.15.4",
]

[dependency-groups]
dev = [
  "mypy",
  "ruff",
  "pytest",
  "types-python-dateutil",
  "pandas-stubs",
  "make>=0.1.6.post2",
  "httpx>=0.28.1",
]

[tool.ruff]
# Set the maximum line length to 100
line-length = 100
# Target Python 3.10+
target-version = "py310"

# Include Python files
include = ["*.py", "*.pyi"]

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    "node_modules",
]

[tool.ruff.lint]
# Enable recommended rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

# Disable specific rules that may be too strict
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI uses this pattern)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line endings
line-ending = "auto"

[tool.ruff.lint.isort]
# Group imports by type
combine-as-imports = true
force-wrap-aliases = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["scripts/research", "scripts/db_inspection"]
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
    "slowapi.*",
    "pythonjsonlogger.*",
    "nba_api.*",
    "redis.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
